Fix navbar jumping

--- a/tryapl/style.css
+++ b/tryapl/style.css
@@ -133,13 +133,13 @@ hr {
 }
 
 #learnButtons {
-  overflow-x: auto;
+  overflow: hidden;
   white-space: nowrap;
   background: #a54cce;
   width: calc(100% + 2em);
   text-align: center;
   margin-left: -1em;
-  margin-top: -5ex;
+  margin-top: -4ex;
 }
 
 #learnButtons button {
